2017.9/_sources/plugins/available/diversity/alpha.txt
alpha: Alpha diversity
======================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime diversity alpha [OPTIONS]

     Computes a user-specified alpha diversity metric for all samples in a
     feature table.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Frequency]
                                     [required]
                                     The feature table containing the
                                     samples for which alpha diversity should be
                                     computed.
     --p-metric [robbins|berger_parker_d|heip_e|chao1_ci|osd|ace|chao1|menhinick|brillouin_d|gini_index|margalef|dominance|fisher_alpha|michaelis_menten_fit|observed_otus|mcintosh_d|doubles|pielou_e|singles|mcintosh_e|goods_coverage|shannon|enspie|simpson|kempton_taylor_q|lladser_ci|simpson_e|esty_ci|lladser_pe|strong]
                                     [required]
                                     The alpha diversity metric to be
                                     computed.
     --o-alpha-diversity PATH        Artifact: SampleData[AlphaDiversity]
                                     [required if not passing --output-dir]
                                     Vector containing per-sample alpha
                                     diversities.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Alpha diversity

   Computes a user-specified alpha diversity metric for all samples in a
   feature table.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table containing the samples for which alpha diversity
       should be computed.
   metric : Str % Choices({'ace', 'berger_parker_d', 'brillouin_d', 'chao1', 'chao1_ci', 'dominance', 'doubles', 'enspie', 'esty_ci', 'fisher_alpha', 'gini_index', 'goods_coverage', 'heip_e', 'kempton_taylor_q', 'lladser_ci', 'lladser_pe', 'margalef', 'mcintosh_d', 'mcintosh_e', 'menhinick', 'michaelis_menten_fit', 'observed_otus', 'osd', 'pielou_e', 'robbins', 'shannon', 'simpson', 'simpson_e', 'singles', 'strong'})
       The alpha diversity metric to be computed.

   Returns
   -------
   alpha_diversity : SampleData[AlphaDiversity]
       Vector containing per-sample alpha diversities.</pre>
       </div>
     </div>
   </div>