2018.8/_sources/plugins/available/diversity/alpha.txt
alpha: Alpha diversity
======================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime diversity alpha [OPTIONS]

     Computes a user-specified alpha diversity metric for all samples in a
     feature table.

   Options:
     --i-table ARTIFACT PATH FeatureTable[Frequency]
                                     The feature table containing the samples for
                                     which alpha diversity should be computed.
                                     [required]
     --p-metric [margalef|menhinick|simpson_e|pielou_e|lladser_pe|robbins|chao1|mcintosh_e|ace|michaelis_menten_fit|berger_parker_d|singles|enspie|brillouin_d|simpson|gini_index|dominance|esty_ci|chao1_ci|observed_otus|strong|fisher_alpha|heip_e|osd|shannon|kempton_taylor_q|mcintosh_d|goods_coverage|doubles|lladser_ci]
                                     The alpha diversity metric to be computed.
                                     [required]
     --o-alpha-diversity ARTIFACT PATH SampleData[AlphaDiversity]
                                     Vector containing per-sample alpha
                                     diversities.  [required if not passing
                                     --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.diversity.methods import alpha

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Alpha diversity

   Computes a user-specified alpha diversity metric for all samples in a
   feature table.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table containing the samples for which alpha diversity
       should be computed.
   metric : Str % Choices({'ace', 'berger_parker_d', 'brillouin_d', 'chao1', 'chao1_ci', 'dominance', 'doubles', 'enspie', 'esty_ci', 'fisher_alpha', 'gini_index', 'goods_coverage', 'heip_e', 'kempton_taylor_q', 'lladser_ci', 'lladser_pe', 'margalef', 'mcintosh_d', 'mcintosh_e', 'menhinick', 'michaelis_menten_fit', 'observed_otus', 'osd', 'pielou_e', 'robbins', 'shannon', 'simpson', 'simpson_e', 'singles', 'strong'})
       The alpha diversity metric to be computed.

   Returns
   -------
   alpha_diversity : SampleData[AlphaDiversity]
       Vector containing per-sample alpha diversities.</pre>
       </div>
     </div>
   </div>